crates/datarig-tui/tests/snapshots/ui_snapshots__inspector_cell_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ● ×                                                                                                        "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│    ▸ analytics                       ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ public                          ││  3                                                                                                                   │"
"│    ▸ shop                            ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│                                      ││  5 FROM shop.orders o                                                                                                │"
"│                                      ││  6 JOIN shop.users u ON u.id = o.user_id                                                                             │"
"│                                      ││  7 WHERE o.status = 'paid';                                                                                          │"
"│                                      ││  8                                                                                                                   │"
"│                                      ││  9 SELECT * FROM analytics.events;                                                                                   │"
"│                                      ││ 10                                                                                                                   │"
"│                                      ││ 11 SELECT * FROM analytics.events ORDER BY created_at DESC;                                                          │"
"│                                      ││ 12                                                                                                                   │"
"│                                      ││ 13 SELECT analytics.slow(30);                                                                                        │"
"│                                      ││ 14                                                                                                                   │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Results · 8 rows ────────────────────────────────────────────────────╮╭ [Cell] Row · I ──────────────────────────────╮"
"│                                      ││   │ profile                                                          ││ profile                                      │"
"│                                      ││   │ jsonb                                                            ││ jsonb · 37 characters                        │"
"│                                      ││ 1 │ {"lang": "ko", "tags": ["dev", "db"]}                            ││                                              │"
"│                                      ││ 2 │ {}                                                               ││ {                                            │"
"│                                      ││ 3 │ {"vip": true, "level": 7}                                        ││   "lang": "ko",                              │"
"│                                      ││ 4 │ {"flags": ["🇰🇷", "🇺🇸"]}                                          ││   "tags": [                                  │" Hidden by multi-width symbols: [(59, " "), (65, " ")]
"│                                      ││ 5 │ {"lang": "ja"}                                                   ││     "dev",                                   │"
"│                                      ││ 6 │ {"lang": "zh"}                                                   ││     "db"                                     │"
"│                                      ││ 7 │ {"lang": "en"}                                                   ││   ]                                          │"
"│                                      ││ 8 │ {"multiline": true}                                              ││ }                                            │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 8 rows · 12ms   │ Enter view cell · n next page · y copy · v select · i detail · I cell/row · Esc back · Tab next pane EN "
