crates/datarig-tui/tests/snapshots/ui_snapshots__inspector_row_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ● ×                                                                                                        "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│    ▸ analytics                       ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ public                          ││  3                                                                                                                   │"
"│    ▸ shop                            ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│                                      ││  5 FROM shop.orders o                                                                                                │"
"│                                      ││  6 JOIN shop.users u ON u.id = o.user_id                                                                             │"
"│                                      ││  7 WHERE o.status = 'paid';                                                                                          │"
"│                                      ││  8                                                                                                                   │"
"│                                      ││  9 SELECT * FROM analytics.events;                                                                                   │"
"│                                      ││ 10                                                                                                                   │"
"│                                      ││ 11 SELECT * FROM analytics.events ORDER BY created_at DESC;                                                          │"
"│                                      ││ 12                                                                                                                   │"
"│                                      ││ 13 SELECT analytics.slow(30);                                                                                        │"
"│                                      ││ 14                                                                                                                   │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Results · 3 rows ────────────────────────────────────────────────────╮╭ Cell [Row] · I ──────────────────────────────╮"
"│                                      ││   │ PK id │ FK user_id │ UQ email           │ name       │ PK FK ord…││ PK id: 1                                     │"
"│                                      ││   │ int8  │ int8       │ text               │ text       │ int8      ││ FK user_id: 1                                │"
"│                                      ││ 1 │     1 │          1 │ user01@example.com │ ユーザー 1 │          1││ UQ email: user01@example.com                 │" Hidden by multi-width symbols: [(89, " "), (91, " "), (93, " "), (95, " ")]
"│                                      ││ 2 │     2 │          1 │ user02@example.com │ ユーザー 2 │          2││ name: ユーザー 1                             │" Hidden by multi-width symbols: [(89, " "), (91, " "), (93, " "), (95, " "), (121, " "), (123, " "), (125, " "), (127, " ")]
"│                                      ││ 3 │     3 │          1 │ user03@example.com │ ユーザー 3 │          3││ PK FK order_id: 1                            │" Hidden by multi-width symbols: [(89, " "), (91, " "), (93, " "), (95, " ")]
"│                                      ││                                                                      ││ PK line_no: 1                                │"
"│                                      ││                                                                      ││ FK product_id: 7                             │"
"│                                      ││                                                                      ││ doubled: 2                                   │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"│                                      ││                                                                      ││                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 3 rows · 3ms    │ Enter view cell · n next page · y copy · v select · i detail · I cell/row · Esc back · Tab next pane EN "
