crates/datarig-tui/tests/snapshots/ui_snapshots__inspector_row_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ● ×                                        "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ analytics       ││  2▎SELECT * FROM shop.users WHERE id <= 8;           │"
"│    ▸ public          ││  3                                                   │"
"│    ▸ shop            ││  4 SELECT u.name, o.status, o.total_amount           │"
"│                      ││  5 FROM shop.orders o                                │"
"│                      ││  6 JOIN shop.users u ON u.id = o.user_id             │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Results · 3 rows ────────────╮╭ Cell [Row] · I ──────╮"
"│                      ││   │ PK id │ FK user_id │ UQ …││ PK id: 1             │"
"│                      ││   │ int8  │ int8       │ text││ FK user_id: 1        │"
"│                      ││ 1 │     1 │          1 │ use…││ UQ email: user01@exa…│"
"│                      ││ 2 │     2 │          1 │ use…││ name: ユーザー 1     │" Hidden by multi-width symbols: [(65, " "), (67, " "), (69, " "), (71, " ")]
"│                      ││ 3 │     3 │          1 │ use…││ PK FK order_id: 1    │"
"│                      ││                              ││ PK line_no: 1        │"
"│                      ││                              ││ FK product_id: 7     │"
"│                      ││                              ││ doubled: 2           │"
"│                      ││                              ││                      │"
"│                      ││                              ││                      │"
"│                      ││                              ││                      │"
"╰──────────────────────╯╰──────────────────────────────╯╰──────────────────────╯"
" NORMAL  local-pg · policy: default │ 3 rows · 3ms         │ Enter view cell EN "
