crates/datarig-tui/tests/snapshots/ui_snapshots__launch_unknown_profile_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮╭ Workspace ───────────────────────────────────────────╮"
"│  ＋ New connection   ││                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│▸ ○   local-pg        ││  No open tabs                                        │"
"│▸ ○   v6              ││  Pick a connection in the explorer, or press         │"
"│▸ ○   分析-replica    ││  Ctrl+O.                                             │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                      ││                                                      │"
"│                      ││  Enter      Connect and open a console               │"
"│                      ││  Ctrl+O     Quick connect                            │"
"│                      ││  Ctrl+T     New console tab                          │"
"│                      ││  Space t u  Reopen a closed tab                      │"
"│                      ││  n          New connection                           │"
"│                      ││  F1         Keyboard help                            │"
"│                      ││  :          Commands                                 │"
"│                      ││                                                      │"
"│                      ││  No connection profile named “nope”                  │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"                   │ Enter open · : commands · F1 help · q quit · Space more EN "
